// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseConfig right example with default values 1`] = `
Object {
  "caseSensitive": false,
  "comment": "test",
  "issueConfigs": Array [
    Object {
      "content": Array [
        "内容1",
        "内容2",
        "🐶",
      ],
    },
    Object {
      "content": Array [
        "🐱",
      ],
    },
  ],
}
`;

exports[`parseConfig right example without default values 1`] = `
Object {
  "caseSensitive": true,
  "comment": "test",
  "issueConfigs": Array [
    Object {
      "content": Array [
        "内容1",
        "内容2",
        "🐶",
      ],
    },
    Object {
      "content": Array [
        "🐱",
      ],
    },
  ],
}
`;
